Added solenoid states and cleanup