@@ -1,6 +1,5 @@
 package com.palyrobotics.frc2020.behavior;
 
-import java.util.Arrays;
 import java.util.List;
 
 public abstract class MultipleRoutine extends RoutineBase {
@@ -8,7 +7,7 @@ public abstract class MultipleRoutine extends RoutineBase {
 	protected final List<RoutineBase> mRoutines;
 
 	public MultipleRoutine(RoutineBase... routines) {
-		this(Arrays.asList(routines));
+		this(List.of(routines));
 	}
 
 	public MultipleRoutine(List<RoutineBase> routines) {
@@ -22,8 +21,8 @@ public abstract class MultipleRoutine extends RoutineBase {
 	public String toString() {
 		StringBuilder name = new StringBuilder(super.getName()).append(":");
 		for (RoutineBase routine : mRoutines) {
-			name.append("\n").append("    ").append(routine).append(" ").append("[")
-					.append(routine.isFinished() ? "Finished" : "Running").append("]");
+			name.append("\n").append("    ").append(routine).append(" ").append("[").append(routine.getStatus())
+					.append("]");
 		}
 		return name.toString();
 	}
